# random_vocab

./: .gitignore  pyproject.toml
data/source/: meaning.csv
random_vocab/: ask_meaning.py
tests/: test_random_vocab.py
