[tool.poetry]
name = "random_vocab"
version = "0.1.0"
description = "Command Line interface, to asnwer word-meaning"
authors = ["Somitra <smtrgupta96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
